--- a/sheeesh/defaultWebpage.html
+++ b/sheeesh/defaultWebpage.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome Page</title>
+  <title>SHEEEEEESH</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
+    #picture-container {
+      display: none;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-<h1>SHEEEESH you made it to my default Webpage</h1>
-<p>This is the default welcome page. Feel free to leave</p>
+<h1>Welcome to My Website!</h1>
+<p>You're welcome to leave :)</p>
+<button id="show-picture-btn">Show Picture</button>
+<div id="picture-container">
+  <img src="https://lh3.googleusercontent.com/pw/AIL4fc9vMvZHtmmcWth0HMLhrM230-u57la7os5SV9RCMN0aV0pRe6m9pC8-SsXy75tQ3Wquc-l8MwWNiHL9Ar82nFpWQLD1Vea9lBsS3wetTv5Wj3fUf_t_HSbehEVTxmfFu7wxhOCajI4qYHIANy_kW_vw=w3024-h4032-s-no?authuser=0" alt= "Resized Image" width="100" height="150">
+</div>
+
+
 </body>
 </html>
