--- a/site/FILE_SAVED.html
+++ b/site/FILE_SAVED.html
@@ -6,5 +6,7 @@
 <body>
 <h1>File Upload Success</h1>
 <p>Your file was uploaded successfully.</p>
+
+<p><a href="/">GO HOME</a></p>
 </body>
 </html>
