--- a/site/error/500.html
+++ b/site/error/500.html
@@ -34,5 +34,6 @@
     <div class="error-message">Internal Server Error</div>
     <p>Sorry, an unexpected error occurred on the server.</p>
 </div>
+<p><a href="/">GO HOME</a></p>
 </body>
 </html>
