--- a/site/error/500_FILE_NOT_SAVED.html
+++ b/site/error/500_FILE_NOT_SAVED.html
@@ -34,5 +34,6 @@
   <div class="error-message">Internal Server Error</div>
   <p>Not able to store uploaded File!</p>
 </div>
+<p><a href="/">GO HOME</a></p>
 </body>
 </html>
