--- a/site/handleFoldersLater.html
+++ b/site/handleFoldersLater.html
@@ -32,5 +32,6 @@
 <div class="error-container">
   <p>Sorry, we unable to handle Folders yet ...</p>
 </div>
+<p><a href="/">GO HOME</a></p>
 </body>
 </html>
