--- a/site/subscribe.html
+++ b/site/subscribe.html
@@ -5,10 +5,16 @@
 </head>
 <h1>OMG SUBSCRIBE IT'S AWESOME!1!1!!!!1</h1>
 <body>
-<form action="/subscribe" method="post">
-	<input type="bullsht" name="textData" placeholder="First Name">
-	<input type="bullsht" name="textData" placeholder="Last Name">
+<form action="/subscribe" method="post" filename="filename">
+	<input type="urMOM" name="textData" placeholder="First Name">
+	<input type="text" name="lastName" placeholder="Last Name">
+	<!-- <input type="text" name="lastName" placeholder="email"> -->
 	<button type="submit">Subscribe</button>
-  </form>
-</body>
+</form>
+
+
+	</body>
 </html>
+
+<!-- input "name" is for string we search, 
+		after '=' there should be the value  -->
