--- a/site/postRequest.html
+++ b/site/postRequest.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to Image Upload</title>
+    <title>TEST Welcome to Image Upload</title>
 </head>
 <body>
 <h1>Welcome to Image Upload</h1>
-<p>Please select a JPEG image to upload:</p>
+<p>TEST Please select a JPEG image to upload:</p>
 <form action="/upload" method="post">
     <label for="textData">Enter Text:</label>
     <textarea id="textData" name="textData" rows="4" cols="50"></textarea>
