--- a/site/postMultipartRequest.html
+++ b/site/postMultipartRequest.html
@@ -8,40 +8,68 @@
 
 <h1>Welcome to Upload all u want</h1>
 <br>
-<h3>TEST 1:  upload image/* </h3>
-<p> -- -- --> [&#9989; *.bmp, *.jpeg/jpg, *.gif, *.png *.bmp, *.avif, *.svg, *.ico, *.tif/tiff, *.webp]</p>
+<!--<h3>TEST 1:  upload image/* </h3>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.bmp, *.jpeg/jpg, *.gif, *.png *.bmp, *.avif, *.svg, *.ico, *.tif/tiff, *.webp]</p>-->
+<!--&lt;!&ndash;<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>&ndash;&gt;-->
+<!--<form action="/upload" method="post" enctype="multipart/form-data">-->
+<!--    <input type="file" name="img" accept="image/*">-->
+<!--    <button type="submit">Submit</button>-->
+<!--</form><br><br>-->
+
+<!--<h3>TEST 2:  upload application/* </h3>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.pdf, *.doc, *.docx, *.bin, *.json, *.gz]</p>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>-->
+<!--<form action="/upload" method="post" enctype="multipart/form-data">-->
+<!--    <input type="file" id="application" name="app" accept="application/*">-->
+<!--    <button type="submit">Submit</button>-->
+<!--</form><br><br>-->
+
+<!--<h3>TEST 3:  upload video/* </h3>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.mpeg, *.avi, *.mp4, *.ogv, *.webm]</p>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>-->
+<!--<form action="/upload" method="post" enctype="multipart/form-data">-->
+<!--    <input type="file" id="video" name="vid" accept="video/*">-->
+<!--    <button type="submit">Submit</button>-->
+<!--</form><br><br>-->
+
+
+<!--<h3>TEST 4:  upload text/* </h3>-->
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.html, *.js, *.mjs, *.txt, *.htm, *.ics, *.css, *.csv]</p>-->
+<!--&lt;!&ndash;<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>&ndash;&gt;-->
+<!--<form action="/upload" method="post" enctype="multipart/form-data">-->
+<!--    <input type="file" id="text" name="txt" accept="text/*">-->
+<!--    <button type="submit">Submit</button>-->
+<!--</form><br><br>-->
+
+<h3>u can upload EVERYTHING </h3>
+<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.html, *.js, *.mjs, *.txt, *.htm, *.ics, *.css, *.csv]</p>-->
 <!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>-->
 <form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="img" accept="image/*">
-    <button type="submit">Submit</button>
-</form><br><br>
-
-<h3>TEST 2:  upload application/* </h3>
-<p> -- -- --> [&#9989; *.pdf, *.doc, *.docx, *.bin, *.json, *.gz]</p>
-<p> -- -- --> [&#10060; ]</p>
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" id="application" name="app" accept="application/*">
-    <button type="submit">Submit</button>
-</form><br><br>
-
-<h3>TEST 3:  upload video/* </h3>
-<p> -- -- --> [&#9989; *.mpeg, *.avi, *.mp4, *.ogv, *.webm]</p>
-<p> -- -- --> [&#10060; ]</p>
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" id="video" name="vid" accept="video/*">
+    <input type="file" id="everything" name="evr">
     <button type="submit">Submit</button>
 </form><br><br>
 
 
-<h3>TEST 4:  upload text/* </h3>
-<p> -- -- --> [&#9989; *.html, *.js, *.mjs, *.txt, *.htm, *.ics, *.css, *.csv]</p>
-<!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>-->
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" id="text" name="txt" accept="text/*">
-    <button type="submit">Submit</button>
-</form><br><br>
+<h1>Delete File</h1>
+<!--<form action="/delete" method="post">-->
+<!--    <label for="filename">Enter the file name to delete: </label>-->
+<!--    <input type="text" id="filename" name="filename" required>-->
+<!--    <button type="submit" onclick="return confirm('Are you sure you want to delete the file?');">Delete</button>-->
+<!--</form>-->
 
 
+<!--<h1>Delete Test</h1>-->
+<!--<form action="http://your_server_address:port/delete" method="post">-->
+<!--    <input type="hidden" name="_method" value="delete">-->
+<!--    <button type="submit" onclick="return confirm('Are you sure you want to delete the file?')">Delete</button>-->
+<!--</form>-->
+<form id="deleteForm">
+    <label for="filePath">File Path:</label>
+    <input type="text" id="filePath" name="filePath" required>
+    <button type="button" id="deleteButton">Delete</button>
+</form>
+
+<script src="scripts/script.js"></script>
 </body>
 </html>
 
