--- a/site/postMultipartRequest.html
+++ b/site/postMultipartRequest.html
@@ -41,7 +41,7 @@
 <!--    <button type="submit">Submit</button>-->
 <!--</form><br><br>-->
 
-<h3>u can upload EVERYTHING </h3>
+<h1>Upload File </h1>
 <!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#9989; *.html, *.js, *.mjs, *.txt, *.htm, *.ics, *.css, *.csv]</p>-->
 <!--<p> &#45;&#45; &#45;&#45; &ndash;&gt; [&#10060; ]</p>-->
 <form action="/upload" method="post" enctype="multipart/form-data">
@@ -50,7 +50,6 @@
 </form><br><br>
 
 
-<h1>Delete File</h1>
 <!--<form action="/delete" method="post">-->
 <!--    <label for="filename">Enter the file name to delete: </label>-->
 <!--    <input type="text" id="filename" name="filename" required>-->
@@ -63,13 +62,18 @@
 <!--    <input type="hidden" name="_method" value="delete">-->
 <!--    <button type="submit" onclick="return confirm('Are you sure you want to delete the file?')">Delete</button>-->
 <!--</form>-->
+
+
+<h1>Delete File</h1>
 <form id="deleteForm">
-    <label for="filePath">File Path:</label>
+    <label for="filePath">File:</label>
     <input type="text" id="filePath" name="filePath" required>
     <button type="button" id="deleteButton">Delete</button>
+    <p id="resultMessage"></p>
 </form>
+<script src="scripts/deleteScript.js"></script>
 
-<script src="scripts/script.js"></script>
+
 </body>
 </html>
 
