index page works (maybe timestamp?), even deleting :)))))

--- a/error/handleFoldersLater.html
+++ b/error/handleFoldersLater.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>500 Internal Server Error</title>
+  <title>6969</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -29,11 +29,9 @@
   </style>
 </head>
 <body>
-<div class="container">
-  <div class="error-code">500</div>
-  <div class="error-message">Internal Server Error</div>
-  <p>Not able to store uploaded File!</p>
+<div class="error-container">
+  <p>Sorry, we unable to handle Folders yet ...</p>
+  <p><a href="/">GO HOME</a></p>
 </div>
-<p><a href="/">GO HOME</a></p>
 </body>
 </html>
