--- a/root/index.html
+++ b/root/index.html
@@ -1,3 +1,57 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <link rel="stylesheet" href="styles/styles.css">-->
+<!--    <title>Welcome to Upload all u want</title>-->
+<!--    <script src="scripts/deleteScript.js"></script>-->
+<!--</head>-->
+<!--    <body>-->
+<!--        <div class="background-image"></div>-->
+<!--        <div class="content">-->
+<!--            <h1>Welcome to Upload All You Want</h1>-->
+<!--        -->
+<!--            <div class="form-section"><br>-->
+<!--                <h3> Upload File</h3>-->
+<!--                <form class="upload-form" action="/upload" method="post" enctype="multipart/form-data">-->
+<!--                    <input type="file" id="everything" name="evr" class="file-input">-->
+<!--                    <button type="submit" class="submit-button">Upload</button>-->
+<!--                </form>-->
+<!--            </div>-->
+
+
+<!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
+<!--&lt;!&ndash;test that proofs that UNKNOWN requests should not result in a crash [PUT] &ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="form-section"><h3>Test PUT method</h3>&ndash;&gt;-->
+<!--&lt;!&ndash;    <input type="text" id="data" class="text-input" placeholder="Enter data">&ndash;&gt;-->
+<!--&lt;!&ndash;    <button id="submitButton" class="submit-button">Submit PUT Request</button></div><script>&ndash;&gt;-->
+<!--&lt;!&ndash;    document.getElementById("submitButton").addEventListener("click", function () {const data = document.getElementById("data").value;&ndash;&gt;-->
+<!--&lt;!&ndash;    // Make a PUT request using the Fetch API&ndash;&gt;-->
+<!--&lt;!&ndash;    fetch(`http://${hostname}:${port}/${encodeURIComponent(filePath)}`, {method: "PUT", body: JSON.stringify({ data }), // Convert data to JSON&ndash;&gt;-->
+<!--&lt;!&ndash;    headers: {"Content-Type": "application/json",},})&ndash;&gt;-->
+<!--&lt;!&ndash;    .then((response) => response.json())&ndash;&gt;-->
+<!--&lt;!&ndash;    .then((result) => {console.log("Response from server:", result);})&ndash;&gt;-->
+<!--&lt;!&ndash;    .catch((error) => {console.error("Error:", error);});});</script>&ndash;&gt;-->
+<!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
+
+
+<!--            <div class="form-section"><br><br>-->
+<!--                <h3>Delete File</h3>-->
+<!--                <form id="deleteForm" class="delete-form">-->
+<!--                    <label for="filePath" class="file-label">Enter File:</label>-->
+<!--                    <input type="text" id="filePath" name="filePath" class="file-input" required>-->
+<!--                    <button type="button" id="deleteButton" class="delete-button">Delete</button>-->
+<!--                    <p id="resultMessage" class="result-message"></p>-->
+<!--                </form>-->
+<!--                <script src="scripts/deleteScript.js"></script>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </body>-->
+<!--</html>-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,29 +60,29 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Welcome to Upload all u want</title>
 </head>
-    <body>
-        <div class="background-image"></div>
-        <div class="content">
-            <h1>Welcome to Upload All You Want</h1>
-        
-            <div class="form-section"><br>
-                <h3> Upload File</h3>
-                <form class="upload-form" action="/upload" method="post" enctype="multipart/form-data">
-                    <input type="file" id="everything" name="evr" class="file-input">
-                    <button type="submit" class="submit-button">Upload</button>
-                </form>
-            </div>
-            
-            <div class="form-section"><br><br>
-                <h3>Delete File</h3>
-                <form id="deleteForm" class="delete-form">
-                    <label for="filePath" class="file-label">Enter File:</label>
-                    <input type="text" id="filePath" name="filePath" class="file-input" required>
-                    <button type="button" id="deleteButton" class="delete-button">Delete</button>
-                    <p id="resultMessage" class="result-message"></p>
-                </form>
-                <script src="scripts/deleteScript.js"></script>
-            </div>
-        </div>
-    </body>
+<body>
+<div class="background-image"></div>
+<div class="content">
+    <h1>Welcome to Upload All You Want</h1>
+
+    <div class="form-section"><br>
+        <h3> Upload File</h3>
+        <form class="upload-form" action="/upload" method="post" enctype="multipart/form-data">
+            <input type="file" id="everything" name="evr" class="file-input">
+            <button type="submit" class="submit-button">Upload</button>
+        </form>
+    </div>
+
+    <div class="form-section"><br><br>
+        <h3>Delete File</h3>
+        <form id="deleteForm" class="delete-form">
+            <label for="filePath" class="file-label">Enter File:</label>
+            <input type="text" id="filePath" name="filePath" class="file-input" required>
+            <button type="button" id="deleteButton" class="delete-button">Delete</button>
+            <p id="resultMessage" class="result-message"></p>
+        </form>
+        <script src="scripts/deleteScript.js"></script>
+    </div>
+</div>
+</body>
 </html>
