--- a/root/index.html
+++ b/root/index.html
@@ -11,7 +11,7 @@
 <!--        <div class="background-image"></div>-->
 <!--        <div class="content">-->
 <!--            <h1>Welcome to Upload All You Want</h1>-->
-<!--        -->
+
 <!--            <div class="form-section"><br>-->
 <!--                <h3> Upload File</h3>-->
 <!--                <form class="upload-form" action="/upload" method="post" enctype="multipart/form-data">-->
@@ -62,8 +62,8 @@
 </head>
 <body>
 <div class="background-image"></div>
-<div class="content">
-    <h1>Welcome to Upload All You Want</h1>
+    <div class="content">
+        <h1>Welcome to Upload All You Want</h1>
 
     <div class="form-section"><br>
         <h3> Upload File</h3>
@@ -72,6 +72,22 @@
             <button type="submit" class="submit-button">Upload</button>
         </form>
     </div>
+
+
+        <!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
+        <!--&lt;!&ndash;test that proofs that UNKNOWN requests should not result in a crash [PUT] &ndash;&gt;-->
+<!--            <div class="form-section"><h3>Test PUT method</h3>-->
+<!--            <input type="text" id="data" class="text-input" placeholder="Enter data">-->
+<!--            <button id="submitButton" class="submit-button">Submit PUT Request</button></div><script>-->
+<!--            document.getElementById("submitButton").addEventListener("click", function () {const data = document.getElementById("data").value;-->
+<!--            // Make a PUT request using the Fetch API-->
+<!--            fetch(`http://${hostname}:${port}/${encodeURIComponent(filePath)}`, {method: "PUT", body: JSON.stringify({ data }), // Convert data to JSON-->
+<!--            headers: {"Content-Type": "application/json",},})-->
+<!--            .then((response) => response.json())-->
+<!--            .then((result) => {console.log("Response from server:", result);})-->
+<!--            .catch((error) => {console.error("Error:", error);});});</script>-->
+        <!--&lt;!&ndash; * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * &ndash;&gt;-->
+
 
     <div class="form-section"><br><br>
         <h3>Delete File</h3>
