POST response code cleaned up, check for all recv()&&send() done,  next:implement CGI + get Parser data

--- a/root/index.html
+++ b/root/index.html
@@ -72,6 +72,10 @@
         </form>
     </div>
 
+
+<!--  cgi button -->
+
+
     <div class="form-section"><br><br>
         <h3>Delete File</h3>
         <form id="deleteForm" class="delete-form">
