cgi testing for structure

--- a/root/index.html
+++ b/root/index.html
@@ -73,7 +73,10 @@
     </div>
 
 
-<!--  cgi button -->
+    <div class="form-section"><br>
+        <h3>cgi</h3>
+		<button onclick="location.href='cgi.html'">CGI-test</button>
+    </div>
 
 
     <div class="form-section"><br><br>
