--- a/root/cgi.html
+++ b/root/cgi.html
@@ -4,7 +4,7 @@
 	<title>CGI Example</title>
 </head>
 <body>
-	<h1>GET</h1>
+	<h1>GET py</h1>
 	<h2>Enter your name:</h2>
 	<form action="cgi-bin/simple.py" method="get">
 		<input type="text" name="name">
@@ -13,6 +13,18 @@
 	<h1>POST</h1>
 	<h2>Enter your name:</h2>
 	<form action="/cgi-bin/simple.py" method="post"> <!--  -->
+		<input type="text" name="name">
+		<input type="submit" value="Submit">
+	</form>
+	<h1>GET pl</h1>
+	<h2>Enter your name:</h2>
+	<form action="cgi-bin/simple.pl" method="get">
+		<input type="text" name="name">
+		<input type="submit" value="Submit">
+	</form>
+	<h1>POST</h1>
+	<h2>Enter your name:</h2>
+	<form action="/cgi-bin/simple.pl" method="post"> <!--  -->
 		<input type="text" name="name">
 		<input type="submit" value="Submit">
 	</form>
