--- a/root/cgi.html
+++ b/root/cgi.html
@@ -10,7 +10,7 @@
 		<input type="text" name="name">
 		<input type="submit" value="Submit">
 	</form>
-	<h1>POST</h1>
+	<h1>POST py</h1>
 	<h2>Enter your name:</h2>
 	<form action="/cgi-bin/simple.py" method="post"> <!--  -->
 		<input type="text" name="name">
@@ -22,7 +22,7 @@
 		<input type="text" name="name">
 		<input type="submit" value="Submit">
 	</form>
-	<h1>POST</h1>
+	<h1>POST pl</h1>
 	<h2>Enter your name:</h2>
 	<form action="/cgi-bin/simple.pl" method="post"> <!--  -->
 		<input type="text" name="name">
