small cosmetic fixes

--- a/root/index.html
+++ b/root/index.html
@@ -59,7 +59,7 @@
 <!--    PUT    -->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
         <!--test that proofs that UNKNOWN requests should not result in a crash [PUT] -->
-        <div class="form-section"><br><br><h3>Test PUT method</h3>
+        <!-- <div class="form-section"><br><br><h3>Test PUT method</h3>
         <input type="text" id="data" class="text-input" placeholder="Enter data">
         <button id="submitButton" class="submit-button">Submit PUT Request</button><script>
         document.getElementById("submitButton").addEventListener("click", function () {const data = document.getElementById("data").value;
@@ -70,7 +70,7 @@
         .then((result) => {console.log("Response from server:", result);})
         .catch((error) => {console.error("Error:", error);});});
         </script>
-        </div>
+        </div> -->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
     </div>
