--- a/error/504.html
+++ b/error/504.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>408</title>
+  <title>504</title>
   <style> body, html {
     height: 100%;
     margin: 0;
@@ -55,7 +55,7 @@
   <body>
     <div class="background-image"></div>
     <div class="content">
-      <h1>408 Request Timeout</h1>
+      <h1>504 Gateway Timeout</h1>
 
       <div class="button-container">
         <span>GO </span>
